Add fixes from 1.21.1 backport